--- a/public/index.html
+++ b/public/index.html
@@ -87,24 +87,24 @@
                 <div class="intro-heading" >החלק שלך בנדל"ן</div>
                 <div class="container">
                   <div class="row text-center">
-
-                      <div class="col-md-3" style="margin-left: 14%;">
+                    <div style="margin-right:-3.5%;"class="col-md-2"></div>
+                      <div class="col-md-3">
                           <span>
-                              <img src="img/header_icons/3.png" />
+                              <img class="imghead" src="img/header_icons/3.png" />
                           </span>
                           <h4 class="service-heading">הנכס נמכר בתום הבנייה הקרן והרווחים מחולקים למשקיע</h4>
                       </div>
                       <div class="col-md-3">
                           <span>
-                              <img src="img/header_icons/2.png" />
+                              <img class="imghead"  src="img/header_icons/2.png" />
                           </span>
                           <h4 class="service-heading">רוכשים בהנחה נכס ״על הנייר״ ישירות מקבל״ן</h4>
                       </div>
                       <div class="col-md-3">
                           <span>
-                              <img src="img/header_icons/1.png" />
+                              <img class="imghead"  src="img/header_icons/1.png" />
                           </span>
-                          <h4 class="service-heading">בוחרים מסלול השקעה בפרוייקט נדל״ן</h4>
+                          <h4 class="service-heading"> מצטרפים לקבוצה לרכישת נכס במשותף</h4>
                      </div>
               </div>
             </div>
@@ -199,7 +199,7 @@
                         </li> -->
                         <li class="timeline-image">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img style="margin:2%;" class="img-circle img-responsive" src="img/about/bla.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -214,7 +214,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img style="margin:2%;" class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -229,7 +229,7 @@
                         </li>
                         <li class="timeline-image">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img style="margin:2%;" class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -243,9 +243,9 @@
                         <li class="timeline-inverted">
                           <a href="#contact">
                             <div class="timeline-image">
-                                <h4>לחץ כאן
-                                <br> לרכשית (חלק)
-                                <br>מדירה להשקעה!</h4>
+                                <h3 style="margin-top:30%;">התחל
+                                <br> כאן!
+                                <h3>
                             </div>
                             </a>
                         </li>
@@ -262,22 +262,20 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="http://www.goldfarb.com/he" target="_blank">
                         <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="http://www.izaki-group.com/he/homepage" target="_blank">
                         <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
@@ -412,7 +410,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
+                    <span class="copyright">Copyright &copy; Partments.IO 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -545,7 +543,6 @@
         </div>
     </div>
 
-    Portfolio Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -574,7 +571,6 @@
         </div>
     </div>
 
-    Portfolio Modal 5
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -603,7 +599,6 @@
         </div>
     </div>
 
-    Portfolio Modal 6
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
