--- a/public/index.html
+++ b/public/index.html
@@ -169,16 +169,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">תהליך השקעה</h2>
-                    <div>
-                          <h4>
-                            ב-1990 יצאה רכבת הנדל"ן מהתחנה. מי שעלה בזמן, הגיע לקרון הראשון.<br>
-                            מי שלא עלה, יכול היה רק לנסות לקפוץ על רכבת דוהרת.<br>
-                            עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
-                        </h4>
-                    </div>
+                    <h2 style="color: #fed136" class="section-heading">תהליך השקעה</h2>
                     <h3 class="section-subheading text-muted"></h3>
-
                 </div>
             </div>
             <div class="row">
@@ -203,7 +195,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading"> מליוי בקשת רכישה</h4>
+                                    <h4 id="sub" class="subheading"> מליוי בקשת רכישה</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -218,11 +210,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">חתימה מול היזם</h4>
+                                    <h4  id="sub" class="subheading">חתימה מול היזם</h4>
                                 </div>
                                 <div class="timeline-body">
                                   <p class="text-muted">
-                                    בשלב זה יצור עמכם קשר עו״ד ממשרד הרצוג פוקס נאמן / גולדפרב בעל שם עולמי על מנת להחתים אתכם על הסכם שותפות אשר מסדיר את הליך קניית ומכירת הנכס.
+                                    בשלב זה יצור עמכם קשר עו״ד ממשרד עו״ד גולדפרב על מנת להחתים אתכם על הסכם שותפות אשר מסדיר את הליך קניית ומכירת הנכס
                                   </p>
                                 </div>
                             </div>
@@ -233,7 +225,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">מימוש הנכס</h4>
+                                    <h4  id="sub" class="subheading">מימוש הנכס</h4>
                                 </div>
                                 <div class="timeline-body">
                                   <p class="text-muted">לאחר תום הבנייה הדירה תשווק על ידינו ותמכר במחיר שנקבע מראש לפי תמהיל ההשעה. לאחר המחירה הקרן והרווחים יועברו לחברי הקבוצה</p>
@@ -351,7 +343,7 @@
       </div>
 
       <div class = "caption">
-         <h3>רועי דורון</h3>
+         <h3>רועי גלעד דורון</h3>
          <p> אישתי ואני הגענו לחסכון שמאפשר לקחת משכתנא ואיתה לרכוש דירה. רק המחשבה של עליית הריבית בארה״ב גורמת לי לשקשק מהרעיון</p>
       </div>
    </div>
@@ -395,10 +387,14 @@
         <div class="row">
 
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading"> במילים אחרות</h2>
-              <h2 class="section-heading">אנחנו זה אתם ...</h2>
-              <h2 class="section-heading">אתם.</h2>
-              <a href="#contact"> <button type="submit" class="btn btn-xl">צור קשר עכשיו !</button> </a>
+              <div>
+                    <h4>
+                      ב-1990 יצאה רכבת הנדל"ן מהתחנה. מי שעלה בזמן, הגיע לקרון הראשון.<br>
+                      מי שלא עלה, יכול היה רק לנסות לקפוץ על רכבת דוהרת.<br>
+                      עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
+                  </h4>
+              </div><br />
+              <a href="#contact"> <button type="submit" class="btn btn-xl">לחץ כאן לעלות על הרכבת</button> </a>
 
             </div>
         </div>
