--- a/public/index.html
+++ b/public/index.html
@@ -235,9 +235,9 @@
                         <li class="timeline-inverted">
                           <a href="#contact">
                             <div class="timeline-image">
-                                <h3 style="margin-top:30%;">התחל
+                                <p style="margin-top:30%; font-size:1.55em">התחל
                                 <br> כאן!
-                                <h3>
+                                <p>
                             </div>
                             </a>
                         </li>
@@ -394,7 +394,7 @@
                       עכשיו, אנו מאפשרים לכל אחת ואחד לעלות על הרכבת- ולהגיע עד לקרון הראשון.<br>
                   </h4>
               </div><br />
-              <a href="#contact"> <button type="submit" class="btn btn-xl">לחץ כאן לעלות על הרכבת</button> </a>
+              <a href="#contact"> <button type="submit" class="btn btn-xl">עליה לרכבת</button> </a>
 
             </div>
         </div>
