--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="http://www.izaki-group.com/he/homepage" target="_blank">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <!-- <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt=""> -->
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
