--- a/public/index.html
+++ b/public/index.html
@@ -79,32 +79,32 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header dir="ltr">
     <div class="bg-txt-blk" id="about">
         <div class="container">
             <div class="intro-text above">
                 <div class="intro-heading" >Partments</div>
                 <div class="intro-heading" >החלק שלך בנדל"ן</div>
                 <div class="container">
-                  <div class="row text-center">
+                  <div class="row text-center box">
                     <div style="margin-right:-3.5%;"class="col-md-2"></div>
-                      <div class="col-md-3">
+                      <div class="col-md-3" id="one">
                           <span>
                               <img class="imghead" src="img/header_icons/3.png" />
                           </span>
                           <h4 class="service-heading">הנכס נמכר בתום הבנייה הקרן והרווחים מחולקים למשקיע</h4>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3" id="two">
                           <span>
                               <img class="imghead"  src="img/header_icons/2.png" />
                           </span>
                           <h4 class="service-heading">רוכשים בהנחה נכס ״על הנייר״ ישירות מקבל״ן</h4>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3" id="three">
                           <span>
                               <img class="imghead"  src="img/header_icons/1.png" />
                           </span>
-                          <h4 class="service-heading"> מצטרפים לקבוצה לרכישת נכס במשותף</h4>
+                          <h4 class="service-heading" > מצטרפים לקבוצה לרכישת נכס במשותף</h4>
                      </div>
               </div>
             </div>
@@ -235,7 +235,7 @@
                         <li class="timeline-inverted">
                           <a href="#contact">
                             <div class="timeline-image">
-                                <p style="margin-top:30%; font-size:1.55em">התחל
+                                <p style=" font-size:1.55em">התחל
                                 <br> כאן!
                                 <p>
                             </div>
